# provvi

./: .gitignore  CLAUDE.md  README.md  TECHNICAL_DEBT.md  settings.gradle.kts
android/provvi-maui/: INTEGRATION_GUIDE.md  README.md  provvi-maui.csproj
android/provvi-maui/src/: ProvviCapture.cs  ProvviMauiExtensions.cs
android/provvi-sdk/: build.gradle.kts
android/provvi-sdk/src/main/: AndroidManifest.xml
android/provvi-sdk/src/main/kotlin/br/com/provvi/: ProvviCapture.kt  ProvviError.kt  ProvviResult.kt
android/provvi-sdk/src/main/kotlin/br/com/provvi/assertions/: GenericAssertions.kt  HabilitAiAssertions.kt  ProvviAssertions.kt  README.md
android/provvi-sdk/src/main/kotlin/br/com/provvi/backend/: ProvviBackendClient.kt
android/provvi-sdk/src/main/kotlin/br/com/provvi/c2pa/: C2paEngine.kt
android/provvi-sdk/src/main/kotlin/br/com/provvi/camera/: SecureCameraCapture.kt
android/provvi-sdk/src/main/kotlin/br/com/provvi/crypto/: FrameHasher.kt
android/provvi-sdk/src/main/kotlin/br/com/provvi/location/: LocationValidator.kt
android/provvi-sdk/src/main/kotlin/br/com/provvi/recapture/: RecaptureDetector.kt
android/provvi-sdk/src/main/kotlin/br/com/provvi/security/: DeviceIntegrityChecker.kt
android/provvi-sdk/src/main/rust/: Cargo.toml
android/provvi-sdk/src/main/rust/src/: lib.rs
android/provvi-sdk/src/test/kotlin/br/com/provvi/: ProvviCaptureIntegrationTest.kt
backend/lambda-pdf/: Cargo.toml
backend/lambda-pdf/src/: main.rs
backend/lambda-signer/: .gitignore  Cargo.toml  README.md
backend/lambda-signer/src/: main.rs
backend/lambda-verifier/: Cargo.toml
backend/lambda-verifier/src/: main.rs
backend/scripts/: deploy-verifier.sh  provision-aws.sh
demo-app/: README.md  pubspec.yaml
demo-app/android/app/: build.gradle.kts
demo-app/android/app/src/main/: AndroidManifest.xml
demo-app/android/app/src/main/kotlin/br/com/provvi/provvi_demo/: MainActivity.kt
demo-app/json_tests/: manifest (1).json  manifest (10).json  manifest (11).json  manifest (12).json  manifest (13).json  manifest (14).json  manifest (15).json  manifest (16).json  manifest (17).json  manifest (18).json  manifest (2).json  manifest (3).json  manifest (4).json  manifest (5).json  manifest (6).json  manifest (7).json  manifest (8).json  manifest (9).json
demo-app/lib/: dataset_collection_screen.dart  main.dart  theme.dart
demo-app/lib/screens/: capture_screen.dart  identification_screen.dart  result_screen.dart  tamper_screen.dart
demo-app/lib/services/: provvi_channel.dart
demo-app/lib/widgets/: auth_badge.dart  pipeline_timings_card.dart  provvi_logo.dart
demo-app/test/: widget_test.dart
docs/: TECH_DEBT.md
docs/adr/: ADR-001-pipeline-captura-segura.md  ADR-002-deteccao-recaptura.md  ADR-003-stack-desenvolvimento.md
gradle/: libs.versions.toml
landing/public/: faq.html  gitignore  index.html  logo-preview.html
landing/public/logo/: logo-sheet.html
tools/provvi-recapture-diagnostic/: settings.gradle.kts
tools/provvi-recapture-diagnostic/app/: build.gradle.kts
tools/provvi-recapture-diagnostic/app/src/main/: AndroidManifest.xml
tools/provvi-recapture-diagnostic/app/src/main/kotlin/br/com/provvi/diagnostic/: BitmapImageProxyWrapper.kt  DiagnosticRunner.kt  MainActivity.kt  RecaptureDetector.kt
tools/provvi-recapture-diagnostic/app/src/main/res/layout/: activity_main.xml
