[package]
name    = "lambda-pdf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime     = "0.13"
aws-config         = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb   = "1.57"
aws-sdk-s3         = "1.65"
aws-sdk-secretsmanager = { version = "1", features = ["behavior-version-latest"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono             = { version = "0.4", features = ["serde"] }
base64             = "0.22"
# Geração de PDF puro-Rust, sem dependências de sistema
printpdf           = "0.7"
# QR Code para rodapé do PDF — sem feature "image" para evitar conflito de versão com printpdf
qrcode             = { version = "0.14", default-features = false }
