[package]
name = "lambda-signer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.13"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
aws-sdk-dynamodb = "1.57"
aws-sdk-kms = "1.54"
aws-sdk-secretsmanager = { version = "1", features = ["behavior-version-latest"] }
# feature "oid" necessário para sha2::Sha256 satisfazer AssociatedOid (rsa::pkcs1v15::SigningKey)
sha2 = { version = "0.10", features = ["oid"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Assinatura RSA PKCS#1 v1.5 (sha256WithRSAEncryption) com certificado ICP-Brasil A1
# O suporte a PEM (pkcs1/pem e pkcs8/pem) está incluído nos features default do crate
rsa = "0.9"
