[package]
name    = "provvi_c2pa"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib gera arquivo .so carregável via System.loadLibrary() no Android
crate-type = ["cdylib"]

[dependencies]
# Biblioteca C2PA para criação e assinatura de manifestos
c2pa       = { version = "0.36", features = ["v1_api"] }

# Bindings JNI para expor funções Rust ao runtime Java/Kotlin
jni        = "0.21"

# Serialização/desserialização do JSON de asserções recebido via JNI
serde_json = "1"
